--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/laptopsales
+spring.datasource.url=jdbc:mysql://localhost:3306/laptopshop
 spring.datasource.username=root
 spring.datasource.password=123456Long
 
