--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -10,6 +10,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 jwt.secret = secretly123
+
+
+#60 minutes (30 * 60 seconds = 1800 seconds) - 1000 * 60 * 60
+jwt.expiration= 1000 * 60 * 60;
 management.security.enabled=false
 #mail
 spring.mail.host=smtp.gmail.com
