--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 jwt.secret = secretly123
 
+spring.main.allow-bean-definition-overriding=true
+spring.freemarker.template-loader-path= classpath:/templates
 
 #60 minutes (30 * 60 seconds = 1800 seconds) - 1000 * 60 * 60
 jwt.expiration= 1000 * 60 * 60;
