--- a/spring-backend/pom.xml
+++ b/spring-backend/pom.xml
@@ -47,6 +47,10 @@
 			<version>0.9.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
