--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -17,6 +17,9 @@ spring.freemarker.template-loader-path= classpath:/templates
 #60 minutes (30 * 60 seconds = 1800 seconds) - 1000 * 60 * 60
 jwt.expiration= 1000 * 60 * 60;
 management.security.enabled=false
+
+#DOMAIN_CLIENT=
+
 #mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
