--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -28,3 +28,6 @@ spring.mail.password=nfdqawisszcjbdga
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+#remove trace field exception in response returned when call api - postman
+server.error.include-stacktrace=never
