--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -1,16 +1,18 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/LAPTOP_STORE
-spring.datasource.username=root
-spring.datasource.password=123456Long
+spring.datasource.url=jdbc:postgresql://localhost:5432/shop_tech
+spring.datasource.username=postgres
+spring.datasource.password=123456
 
-## JPA/ Hibernate properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+##  Connect to PostgreSQL Database with Spring Data JPA
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-jwt.secret = secretly123
 
+
+jwt.secret = secretly123
 spring.main.allow-bean-definition-overriding=true
 spring.freemarker.template-loader-path= classpath:/templates
 
@@ -31,3 +33,5 @@ spring.mail.properties.mail.smtp.starttls.required=true
 
 #remove trace field exception in response returned when call api - postman
 server.error.include-stacktrace=never
+
+server.error.include-message=always
