--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+#show binding values
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 jwt.secret = secretly123
 spring.main.allow-bean-definition-overriding=true
