--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -4,12 +4,16 @@ spring.datasource.password=123456
 
 
 ##  Connect to PostgreSQL Database with Spring Data JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baselineOnMigrate = true
+
 
 #show binding values
 logging.level.org.hibernate.type.descriptor.sql=trace
