--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,16 +29,12 @@ jobs:
         cache: maven
     - name: Build with Maven
 #       compile -> run all test -> gen jar file
-      run: mvn verify  
+      run: ./mvnw verify
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
     - name: Build and push Docker image
-      run: mvnw spring-boot:build-image
+      run: ./mvnw spring-boot:build-image
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/shop_laptop
-        
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-#     - name: Update dependency graph
-#       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
