--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,12 +29,12 @@ jobs:
         cache: maven
     - name: Build with Maven
 #       compile -> run all test -> gen jar file
-      run: ./mvnw verify
+      run: mvnw verify
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
     - name: Build and push Docker image
-      run: ./mvnw spring-boot:build-image
+      run: mvnw spring-boot:build-image
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/shop_laptop
