--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ../../spring-backend
 
     steps:
     - uses: actions/checkout@v3
@@ -29,12 +32,12 @@ jobs:
         cache: maven
     - name: Build with Maven
 #       compile -> run all test -> gen jar file
-      run: mvnw verify
+      run: mvn verify
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
     - name: Build and push Docker image
-      run: mvnw spring-boot:build-image
+      run: mvn spring-boot:build-image
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/shop_laptop
