--- a/spring-backend/Dockerfile
+++ b/spring-backend/Dockerfile
@@ -1,15 +1,4 @@
-#
-# Build stage
-#
-FROM maven:3.8.2-jdk-11 AS build
-COPY . .
-RUN mvn clean package -Pprod -DskipTests
-
-#
-# Package stage
-#
-FROM openjdk:11-jdk-slim
-COPY --from=build /target/demo-0.0.1-SNAPSHOT.jar demo.jar
-# ENV PORT=8080
+FROM openjdk:11
+ADD target/spring-boot-tech-shop.jar .
+ENTRYPOINT ["java", "-jar","spring-boot-tech-shop.jar"]
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","demo.jar"]
