--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -11,9 +11,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+spring.datasource.driverClassName=org.postgresql.Driver
+
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baselineOnMigrate = true
-
+#spring.flyway.ignore-missing-migrations=true
 
 #show binding values
 logging.level.org.hibernate.type.descriptor.sql=trace
