--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/shop_tech
-spring.datasource.username=postgres
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:postgresql://localhost:5432/shop_tech
+#spring.datasource.username=postgres
+#spring.datasource.password=123456
+
+spring.datasource.url=${DATABASE_URL}
+#spring.datasource.username=postgres
+#spring.datasource.password=123456
+
+
 
 
 ##  Connect to PostgreSQL Database with Spring Data JPA
