--- a/spring-backend/Dockerfile
+++ b/spring-backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11
-ADD target/spring-boot-tech-shop.jar .
-ENTRYPOINT ["java", "-jar","spring-boot-tech-shop.jar"]
-EXPOSE 8080
+# FROM openjdk:11
+# ADD target/spring-boot-tech-shop.jar .
+# ENTRYPOINT ["java", "-jar","spring-boot-tech-shop.jar"]
+# EXPOSE 8080
