--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 #spring.datasource.username=postgres
 #spring.datasource.password=123456
 
+server.port=8081
+
 spring.datasource.url=${DATABASE_URL}
 #spring.datasource.username=postgres
 #spring.datasource.password=123456
