--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -4,11 +4,9 @@
 
 server.port=8081
 
-
-DATABASE_URL=${DATABASE_URL}
-##spring.datasource.username=postgres
-##spring.datasource.password=123456
-
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.flyway.locations=classpath:db/migration
