--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -1,11 +1,20 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/shop_tech
-#spring.datasource.username=postgres
-#spring.datasource.password=123456
+spring.datasource.url=jdbc:postgresql://localhost:5432/shop_tech
+spring.datasource.username=postgres
+spring.datasource.password=123456
 
 
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+
+
+
+##  Connect to PostgreSQL Database with Spring Data JPA
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baselineOnMigrate = true
