--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 #spring.datasource.username=postgres
 #spring.datasource.password=123456
 
+DEPLOY_FRONTEND = ${DEPLOY_FE}
 
 spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
