--- a/pom.xml
+++ b/pom.xml
@@ -159,7 +159,7 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.1.2</version>
 		</dependency>
-		<dependency>
+		<dependency>l
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-support</artifactId>
 			<version>2.0.8</version>
