--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/shop_tech
-#spring.datasource.username=postgres
-#spring.datasource.password=123456
+spring.datasource.url=jdbc:postgresql://localhost:5432/shop_tech
+spring.datasource.username=postgres
+spring.datasource.password=123456
 
 
 #spring.datasource.url=jdbc:postgres://shop_tech_user:N5H3sc92W3oJAlitmnpu5z7Rj4xdPuXV@dpg-ckn0buf83ejs738qsvgg-a.oregon-postgres.render.com/shop_tech
-spring.datasource.url=jdbc:postgresql://dpg-ckn0buf83ejs738qsvgg-a.oregon-postgres.render.com:5432/shop_tech
-spring.datasource.username=shop_tech_user
-spring.datasource.password=N5H3sc92W3oJAlitmnpu5z7Rj4xdPuXV
+#spring.datasource.url=jdbc:postgresql://dpg-ckn0buf83ejs738qsvgg-a.oregon-postgres.render.com:5432/shop_tech
+#spring.datasource.username=shop_tech_user
+#spring.datasource.password=N5H3sc92W3oJAlitmnpu5z7Rj4xdPuXV
 
 
 
